@startuml

title __FILTER's Class Diagram__\n

  namespace com.kade.mcps {
    namespace filter {
      class com.kade.mcps.filter.CustomAuthenticationFilter {
          - authenticationManager : AuthenticationManager
          {static} - log : Logger
          + CustomAuthenticationFilter()
          + attemptAuthentication()
          # successfulAuthentication()
      }
    }
  }
  

  namespace com.kade.mcps {
    namespace filter {
      class com.kade.mcps.filter.CustomAuthorizationFilter {
          {static} - log : Logger
          - userDetailsService : UserDetailsService
          + CustomAuthorizationFilter()
          # doFilterInternal()
          - getTokenFromRequest()
      }
    }
  }
  

  com.kade.mcps.filter.CustomAuthenticationFilter -up-|> org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter
  com.kade.mcps.filter.CustomAuthenticationFilter o-- com.kade.mcps.security.JwtTokenProvider : jwtTokenProvider
  com.kade.mcps.filter.CustomAuthorizationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.kade.mcps.filter.CustomAuthorizationFilter o-- com.kade.mcps.security.JwtTokenProvider : jwtTokenProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
